// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Rating component > Customized rating component 1`] = `
<div
  class="rating color--dark-blue editing"
>
  
  <i
    class="rating__star jadawel-icon-star rating__star--selected"
  />
  <i
    class="rating__star jadawel-icon-star rating__star--selected"
  />
  <i
    class="rating__star jadawel-icon-star rating__star--selected"
  />
  <i
    class="rating__star jadawel-icon-star"
  />
  <i
    class="rating__star jadawel-icon-star"
  />
  
</div>
`;

exports[`Rating component > Default rating component 1`] = `
<div
  class="rating color--dark-orange"
>
  
  <i
    class="rating__star jadawel-icon-star rating__star--selected"
  />
  <i
    class="rating__star jadawel-icon-star rating__star--selected"
  />
  <i
    class="rating__star jadawel-icon-star rating__star--selected"
  />
  
</div>
`;
